fixed bugs on mobile screens #2

--- a/css/sass/dev.sass
+++ b/css/sass/dev.sass
@@ -326,7 +326,7 @@ body
                         bottom: 4px
                         width: 14px
                         height: 7px
-                        background: url('../imgs/show_full_content.svg')
+                        background: url('../imgs/show_full_content.svg') no-repeat
             
             .items:hover
                 background: #f7f7f7
